--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="glasses_controlled">Glasses controlled by us</string>
     <string name="run_demo">Run Demo</string>
     <string name="send_notification">Send Notification</string>
+    <string name="brightness_slider_label">Glasses Brightness</string>
+
     <string name="scroll_layout_demo_text">
         The text can also scroll like a teleprompter with the scroll layout. This layout also
         supports several configuration options such as font size and scroll speed.
